@@ -1,5 +1,8 @@
 DEF_DW_OP (DW_OP_addr, DW_FORM_addr, 0)
-DEF_DW_OP (DW_OP_deref, DW_FORM_data1, 0)
+DEF_DW_OP (DW_OP_deref, 0, 0)
+DEF_DW_OP (DW_OP_xderef, 0, 0)
+DEF_DW_OP (DW_OP_deref_size, DW_FORM_data1, 0)
+DEF_DW_OP (DW_OP_xderef_size, DW_FORM_data1, 0)
 DEF_DW_OP (DW_OP_const1u, DW_FORM_data1, 0)
 DEF_DW_OP (DW_OP_const1s, DW_FORM_data1, 0)
 DEF_DW_OP (DW_OP_const2u, DW_FORM_data2, 0)
@@ -16,7 +19,6 @@ DEF_DW_OP (DW_OP_over, 0, 0)
 DEF_DW_OP (DW_OP_pick, DW_FORM_data1, 0)
 DEF_DW_OP (DW_OP_swap, 0, 0)
 DEF_DW_OP (DW_OP_rot, 0, 0)
-DEF_DW_OP (DW_OP_xderef, 0, 0)
 DEF_DW_OP (DW_OP_abs, 0, 0)
 DEF_DW_OP (DW_OP_and, 0, 0)
 DEF_DW_OP (DW_OP_div, 0, 0)
@@ -140,8 +142,6 @@ DEF_DW_OP (DW_OP_regx, DW_FORM_udata, 0)
 DEF_DW_OP (DW_OP_fbreg, DW_FORM_sdata, 0)
 DEF_DW_OP (DW_OP_bregx, DW_FORM_udata, DW_FORM_sdata)
 DEF_DW_OP (DW_OP_piece, DW_FORM_udata, 0)
-DEF_DW_OP (DW_OP_deref_size, DW_FORM_data1, 0)
-DEF_DW_OP (DW_OP_xderef_size, DW_FORM_data1, 0)
 DEF_DW_OP (DW_OP_nop, 0, 0)
 DEF_DW_OP (DW_OP_push_object_address, 0, 0)
 DEF_DW_OP (DW_OP_call2, DW_FORM_data2, 0)
