@@ -1,3 +1,7 @@
+2009-01-17  Roland McGrath  <roland@redhat.com>
+
+	* expr_opcodes.h: Fix DW_OP_deref entry.
+
 2009-01-17  Petr Machata  <pmachata@redhat.com>
 
 	* dwarflint.c: Better location handling: references now carry
